# cloudmask_fast

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_fortran.md  README_zh.md  VIS_Cal_Coeff.xcfg  VIS_Cal_Coeff_20200308.xcfg  VIS_Cal_Coeff_20200715.xcfg  VIS_Cal_Coeff_business.xcfg  VIS_Cal_Coeff_old.xcfg  VIS_Cal_Coeff_recali.xcfg  batch_run.py  build.sh  cfg_20200308_1345_business.nml  cfg_20200308_1345_recali.nml  cfg_20200308_1435_business.nml  cfg_20200308_1435_recali.nml  cfg_20200308_1525_business.nml  cfg_20200308_1525_recali.nml  cfg_20200715_0530_business.nml  cfg_20200715_0530_recali.nml  cfg_20200715_0615_business.nml  cfg_20200715_0615_recali.nml  cfg_20200715_0705_business.nml  cfg_20200715_0705_recali.nml  cfg_20220803_0740_business.nml  cfg_20220803_0740_recali.nml  cfg_20220803_0830_business.nml  cfg_20220803_0830_recali.nml  cfg_20220803_0920_business.nml  cfg_20220803_0920_recali.nml  clean.sh  paral_bat_driver_mersi_ii_fylat.py  readme  run_fylat.py  temp_fy3d_config_20200330_0000.nml
coeff/: fylat_thresholds.mersi.aqua.v8  fylat_thresholds.mersi.ii3d.v8  thresholds_mersi_ii.yaml
coeff/plod/: modisdet.dry.101.lit_end  modisdet.ozo.101.lit_end  modisdet.wco.101.lit_end  modisdet.wtl.101.lit_end  modisdet.wts.101.lit_end
coeff/sfc_snow_ice/: NISE_SSMIF13_EASEGRID_M01.HDF  NISE_SSMIF13_EASEGRID_M02.HDF  NISE_SSMIF13_EASEGRID_M03.HDF  NISE_SSMIF13_EASEGRID_M04.HDF  NISE_SSMIF13_EASEGRID_M05.HDF  NISE_SSMIF13_EASEGRID_M06.HDF  NISE_SSMIF13_EASEGRID_M07.HDF  NISE_SSMIF13_EASEGRID_M08.HDF  NISE_SSMIF13_EASEGRID_M09.HDF  NISE_SSMIF13_EASEGRID_M10.HDF  NISE_SSMIF13_EASEGRID_M11.HDF  NISE_SSMIF13_EASEGRID_M12.HDF
config/: default.yaml
config/scenes/: 20220803_0740.yaml  20220803_0830.yaml  20220803_0920.yaml
convert_oisst/: convert_sst_nc2hdf5_code.py  run.sh
convert_oisst/bak/: convert_oisst_year2day_nc2hdf5.sh  convert_sst_daliy_nc2hdf5.py  main_run_cloud.sh  run.sh
cpp/: CMakeLists.txt
cpp/include/fylat/: cloudmask_core.hpp  cloudmask_desert.hpp  cloudmask_polar.hpp  cloudmask_scenes.hpp  cloudmask_spatial.hpp  constants.hpp  global_params.hpp  numerical.hpp  pixel_engine.hpp  symbols.hpp  types.hpp
cpp/src/bindings/: pybind_module.cpp
cpp/src/core/: bitops.cpp
diagnostics/: __init__.py  accuracy_20220803.json  analyze_accuracy.py  batch_geo_analysis.py  batch_myd35_overlap.py  compare_btd.py  scene_validation.py
docs/: clm_diagnostics.md  goals.md  improvement_plan.md  mersi_ii_channels.md  migration_plan.md  modis_channels.md  usage.md  validation_20220803_batch.md
drivefile/: bat_driver_mersi_ii_fylat.py  bat_fylat_fy3mersi_ii.py  fy3d_config_20051001_0525.nml  fy3d_config_20051001_1435.nml  fy3d_config_20051028_0525.nml  fy3d_config_20051028_0625.nml  fy3d_real_config_20180116_0340.nml  fy3d_real_config_20180116_0355.nml  fy3d_real_config_20180116_0400.nml  fy3d_real_config_20180116_0405.nml  fy3d_real_config_20180116_1440.nml  fy3d_real_config_20180203_0440.nml  fy3d_real_config_20180203_0455.nml  fy3d_real_config_20180203_0500.nml  fylat_config.nml  fylat_config_0105_0455.nml  fylat_config_20050105_1030.nml  fylat_config_20050401_0505_land.nml  fylat_config_20050401_1315.nml  fylat_config_20050401_1315_desert.nml  fylat_config_20050702_0525.nml  fylat_config_20050702_1020.nml  fylat_config_20050702_1820.nml  fylat_config_20050702_2015.nml  fylat_config_20050702_2015_gdas.nml  fylat_config_20050703_0605_land_ocean.nml  fylat_config_20050703_0610_land.nml  fylat_config_20050703_0615_land_desert.nml  fylat_config_20050703_2245_polar.nml  fylat_config_20050703_2250_polar.nml  fylat_config_20150103_0530.nml  fylat_config_20171016_0845_land.nml  run_batch.sh  test.nml
include/: cloudmask.inc
plans/: cloudmask_engineering_review.md  cloudmask_python_cpp_migration.md
python/: cal_correct.py  check_cal_ratio.py  diag_calibration.py  find_optimal_thr.py  stats_bt_channels.py  tune_thresholds.py
python/fylat/: __init__.py  ancillary.py  calibration.py  cloudmask_utils.py  config.py  full_driver.py  mersi_io.py  nwp_reader.py  ocean_day.py  pipeline.py  pipeline_full.py  planck.py  product_writer.py  surface.py  thresholds.py
scripts/: batch_run.py  check_migration_build.sh  clean_output.py  compare_clm_regression.py  convert_thresholds.py  run_single.py  verify_baseline.sh
src/: atmtran.f  constant.f90  data_arrays_module.f90  extem101.f  frontend_module.f90  fylat_FY3_MERSI_II_PGS_Driver.f90  fylat_makefile  fylat_makefile_cldmask  get_ancil_data_module.f90  hdf4.f90  inc  io_module.f90  io_module_intermediate.f90  message_module.f90  names_module.f90  numerical.f90  nwp_utils_module.f90  planck_module.f90  platform_module.f90  read_nwp_data_module.f90  rtm_tran_module.f90  rtm_utils_module.f90  strcompress.f  strpos.f
src/cloudamount/: fylat_fy3mersi_cloud_amount.f90
src/cloudmask/: Antarctic_day.f90  Day_snow.f90  LandDay.f90  LandDay_coast.f90  LandDay_desert.f90  LandDay_desert_c.f90  LandNite.f90  Nite_snow.f90  PolarDay_coast.f90  PolarDay_desert.f90  PolarDay_desert_c.f90  PolarDay_land.f90  PolarDay_ocean.f90  PolarDay_snow.f90  PolarNite_land.f90  PolarNite_ocean.f90  PolarNite_snow.f90  chk_coast.f90  chk_land.f90  chk_land_nite.f90  chk_shallow_water.f  chk_spatial2.f  chk_spatial_var.f  chk_sunglint.f90  cloudmask_data_arrays.f90  fill_bit_pixel.f90  fylat_fy3mersi_cloud_mask.f90  get_nl_thresholds.f90  get_regstd.f  get_sg_thresholds.f90  land_module.f90  noncld_obs_chk.f90  ocean_day.f90  ocean_nite.f90  polar_module.f90  (+10 more)
tests/: test_cloudmask_backend_selection.py  test_cpp_io_smoke.py  test_mersi_io_cpp_backend.py  test_nwp_backend_selection.py  test_nwp_reader_layout.py
visualize/: compare_btd.py  figure_1.py  figure_2.py  figure_3.py  io_mersi.py  io_mersi.py.bak  io_myd35.py  plot_utils.py  run_validation.py  scene_validation.py
wgrib/: GRAPES_GFS_grib2_to_bin.sh  GRAPES_GFS_grib2_to_bin_uv.sh  NCEP_grib2_to_bin.sh  NCEP_grib2_to_bin_uv.sh  NCEP_grib2_to_bin_uv_0p25.sh  NCEP_grib2_to_bin_uv_0p25_41Layers.sh  NCEP_grib2_to_bin_uv_41Layers.sh  T639_to_bin.sh  read_bin_test.f90  wgrib2
(+8 files in other folders)
